--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -5,9 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Likes</th>      
+      <th></th>
+      <th style="text-align: left; padding: 15px; color: royalblue">Title</th>
+      <th style="text-align: left; padding: 15px; color: royalblue">Description</th>        
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +15,10 @@
   <tbody>
     <% @videos.each do |video| %>
       <tr>  
-        <td><%= video_tag url_for(video.video), style:"width: 75%; height: auto", controls: true %></td>      
-        <td><%= video.title %></td>
-        <td><%= video.description %></td>
-        <td><%= video.likes %></td>
+        <td><%= video_tag url_for(video.video), style:"width: 200px; height: auto", controls: true %></td>
+        <br>
+        <td style="padding: 15px"><%= video.title %></td>
+        <td style="padding: 15px"><%= video.description %></td>        
         <td><%= link_to 'Show', video %></td>
         <td><%= link_to 'Edit', edit_video_path(video) %></td>
         <td><%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' } %></td>
